--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/*/node_modules
+/*/.pnp
+/*.pnp.js
 
 # testing
 /coverage
 
 # production
-/build
+/*/build
 
 # misc
 .DS_Store
@@ -20,5 +20,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/coursedata
 /*/requests
