--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../../FSO2023-part2/phonebook/ && npm run build && cp -r build ../../FSO2023-part3/phonebook/",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs"
   },
   "author": "Dmitrii Roshkovan",
   "license": "ISC",
@@ -16,6 +20,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.14",
     "nodemon": "^2.0.22"
   }
 }
