--- a/coursedata/package.json
+++ b/coursedata/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../../FSO2023-part2/coursedata/ && npm run build && cp -r build ../../FSO2023-part3/coursedata/",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "Roshkovan Dmitrii",
   "license": "MIT",
@@ -22,6 +23,11 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.2.14",
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.22"
   }
 }
